@@ -1,0 +1,9 @@
+config BR2_PACKAGE_COPAS
+	bool "copas"
+	select BR2_PACKAGE_COXPCALL
+	select BR2_PACKAGE_LUASOCKET
+	help
+	  Copas is a dispatcher based on coroutines that
+	  can be used by TCP/IP servers.
+
+	  http://keplerproject.github.com/copas/
